test/expected/readonly_errors.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "readonly" "x=1"]
  [CompoundListCondition, None]
    [Assign x=2]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "assign=$?"]
  [CompoundListCondition, None]
    [SimpleCommand "export" "y=1"]
  [CompoundListCondition, None]
    [SimpleCommand "readonly" "y"]
  [CompoundListCondition, None]
    [SimpleCommand "export" "y=2"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "export=$?"]
  [CompoundListCondition, None]
    [SimpleCommand "unset" "x"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "unset=$?"]
[Word
  Unquoted "readonly"
]
[Word
  Unquoted "x=1"
]
[Word
  Unquoted "x=2"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "assign="
  Variable "?"
]
[Word
  Unquoted "export"
]
[Word
  Unquoted "y=1"
]
[Word
  Unquoted "readonly"
]
[Word
  Unquoted "y"
]
[Word
  Unquoted "export"
]
[Word
  Unquoted "y=2"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "export="
  Variable "?"
]
[Word
  Unquoted "unset"
]
[Word
  Unquoted "x"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "unset="
  Variable "?"
]
shit: 3:1: error: Unable to assign 'x' because it is read only.
     3 |  x=2; echo "assign=$?"
       |  ^~~ here.
